testdata/baselines/reference/submodule/conformance/paramTagNestedWithoutTopLevelObject2.errors.txt
paramTagNestedWithoutTopLevelObject2.js(6,16): error TS2339: Property 'bar' does not exist on type '{ p: number; }'.


==== paramTagNestedWithoutTopLevelObject2.js (1 errors) ====
    /**
     * @param {object} xyz.bar
     * @param {number} xyz.bar.p
     */
    function g(xyz) {
        return xyz.bar.p;
                   ~~~
!!! error TS2339: Property 'bar' does not exist on type '{ p: number; }'.
    }